--- a/crudProject/WebContent/WEB-INF/web.xml
+++ b/crudProject/WebContent/WEB-INF/web.xml
@@ -9,4 +9,28 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <filter>
+    <filter-name>SegurancaFiltro</filter-name>
+    <filter-class>com.controller.SegurancaFiltro</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>SegurancaFiltro</filter-name>
+    <url-pattern>/admin/*</url-pattern>
+  </filter-mapping>
+  <servlet>
+    <servlet-name>ErrorController</servlet-name>
+    <servlet-class>com.controller.ErrorController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ErrorController</servlet-name>
+    <url-pattern>/ErrorController</url-pattern>
+  </servlet-mapping>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/ErrorController</location>
+  </error-page>
+  <error-page>
+    <exception-type>java.lang.Throwable</exception-type>
+    <location>/ErrorController</location>
+  </error-page>
 </web-app>
